# learn_pyspark

./: NBK1.ipynb  README.md  pyproject.toml
