[tool.poetry]
name = "learn-pyspark"
version = "0.1.0"
description = ""
authors = ["Sarthak Arora <58847609+iasarthak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pyspark = "^3.5.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
